[FIX] Fix small issues with tests